@@ -1,7 +1,9 @@
 # Generated by roxygen2: do not edit by hand
 
 export(extract_areas)
+export(extract_metadata)
 export(extract_tables)
+export(extract_text)
 export(get_page_dims)
 export(locate_areas)
 export(make_thumbnails)
